# rydo

./: Cargo.toml  README.md
src/: cli.rs  cmd.rs  error.rs  main.rs
src/cmd/: tasks.rs
