[package]
name = "rydo"
version = "0.1.0"
edition = "2024"
description = "CLI based todo list application"
license = "MIT"
authors = ["Kwongyhue <kwongyhue@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1", features = ["serde", "v4"] }
clap = { version = "4.0", features = ["derive"] }
serde_with = "3.14.0"
strum_macros = "0.27.2"
thiserror = "2.0.12"
